--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "compile": "node scripts/compile.js",
     "pretest": "npm run compile",
     "test": "./node_modules/.bin/mocha tests",
+    "predeploy": "npm run compile",
     "deploy": "node scripts/deploy.js"
   },
   "repository": {
