--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/mcmicahelchan/juju-contract#readme",
   "dependencies": {
     "fs-extra": "^7.0.1",
+    "moment": "^2.22.2",
     "solc": "^0.4.25",
     "truffle-hdwallet-provider": "0.0.3",
     "web3": "^1.0.0-beta.34"
